--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 canvas{
-    border: 5px solid white;
+    border: 5px solid red;
     border-radius: 20px;
     box-shadow: 5px 5px 5px gray;
 }
